# FourierMellin-PyTorch

./: .gitignore  README.md  dbg2.ipynb  dbg3.ipynb  example.ipynb  pyproject.toml
torch_fouriermellin/: log_polar.py  ops.py  registration.py  transform.py
